kubernetes/applications/ceph-storage/manifests/homepage/homepage-authentik-middleware.yml

# =====================================
# 6. Optional HPA for Homepage
# =====================================
# ---
# apiVersion: autoscaling/v2
# kind: HorizontalPodAutoscaler
# metadata:
#   name: homepage-hpa
#   namespace: homepage
# spec:
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: Deployment
#     name: homepage
#   minReplicas: 1
#   maxReplicas: 3
#   metrics:
#   - type: Resource
#     resource:
#       name: cpu
#       target:
#         type: Utilization
#         averageUtilization: 60

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: homepage-authentik
  namespace: homepage
spec:
  forwardAuth:
    address: http://authentik-server-app.authentik.svc/outpost.goauthentik.io/auth/traefik
    trustForwardHeader: true
    authResponseHeaders:
      - X-authentik-username
      - X-authentik-groups
      - X-authentik-entitlements
      - X-authentik-email
      - X-authentik-name
      - X-authentik-uid
      - X-authentik-jwt
      - X-authentik-meta-jwks
      - X-authentik-meta-outpost
      - X-authentik-meta-provider
      - X-authentik-meta-app
      - X-authentik-meta-version
