kubernetes/applications/ceph-storage/manifests/homepage/homepage-namespace.yml
# =====================================
# 0. Namespace for Homepage
# =====================================
---
apiVersion: v1
kind: Namespace
metadata:
  name: homepage
