kubernetes/applications/ceph-storage/manifests/homepage/homepage-ingress.yml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-ingress
  namespace: homepage
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: homepage-homepage-authentik@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - homepage.example.com
  rules:
    - host: homepage.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage-app
                port:
                  number: 3000
